# libblur

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md
app/: Cargo.toml
app/accelerate/src/: convenience.rs  lib.rs
app/benches/box/: main.rs
app/benches/complex/: main.rs
app/benches/fast_gaussian/: main.rs
app/benches/fast_gaussian_next/: main.rs
app/benches/gauss/: main.rs
app/benches/median/: main.rs
app/benches/non_sep_2d/: main.rs
app/benches/stack_blur/: main.rs
app/src/: main.rs
fuzz/: Cargo.toml  fuzz_avx512.sh
fuzz/bilateral/: bilateral.rs
fuzz/box/: box.rs
fuzz/box_f32/: box_f32.rs
fuzz/box_u16/: box_u16.rs
fuzz/fast_gaussian/: fast_gaussian.rs
fuzz/fast_gaussian_f32/: fast_gaussian_f32.rs
fuzz/fast_gaussian_next/: fast_gaussian_next.rs
fuzz/fast_gaussian_next_f32/: fast_gaussian_next_f32.rs
fuzz/fast_gaussian_next_u16/: fast_gaussian_next_u16.rs
fuzz/fast_gaussian_u16/: fast_gaussian_u16.rs
fuzz/filter_complex/: filter_complex.rs
fuzz/filter_complex_q/: filter_complex_q.rs
fuzz/gauss/: gauss.rs
fuzz/gauss_f32/: gauss_f32.rs
fuzz/gauss_small_kernel/: gauss_small_kernel.rs
fuzz/gauss_u16/: gauss_u16.rs
fuzz/motion/: motion.rs
fuzz/stack_blur/: stack_blur.rs
fuzz/stack_blur_f32/: stack_blur_f32.rs
fuzz/stack_blur_u16/: stack_blur_u16.rs
src/lib/: Cargo.toml  adaptive_blur.rs  box_blur.rs  box_blur_neon.rs  box_blur_sse.rs  channels_configuration.rs  cpu_features.rs  edge_mode.rs  fast_bilateral_filter.rs  fast_bilateral_image.rs  fast_gaussian.rs  fast_gaussian_f16.rs  fast_gaussian_f32.rs  fast_gaussian_image.rs  fast_gaussian_image_next.rs  fast_gaussian_neon.rs  fast_gaussian_next.rs  fast_gaussian_next_f16.rs  fast_gaussian_next_f32.rs  fast_gaussian_next_neon.rs  fast_gaussian_next_sse.rs  fast_gaussian_sse.rs  fast_gaussian_superior.rs  gaussian.rs  gaussian_blur_image.rs  gaussian_f16.rs  gaussian_helper.rs  gaussian_neon.rs  gaussian_sse.rs  image.rs  laplacian.rs  lib.rs  median_blur.rs  median_blur_gen.rs  mlaf.rs  motion_blur.rs  mul_table.rs  neon_utils.rs  sobel.rs  sse_utils.rs  (+11 more)
src/lib/avx/: mod.rs  pack.rs  v_load.rs  v_store.rs
src/lib/box/: box_blur.rs  box_blur_avx.rs  box_blur_neon.rs  box_blur_sse.rs  mod.rs
src/lib/box_filter/: box_blur.rs  box_blur_avx.rs  box_blur_neon.rs  box_blur_sse.rs
src/lib/filter1d/: arena.rs  arena_roi.rs  color_group.rs  filter.rs  filter_1d_approx.rs  filter_1d_column_handler.rs  filter_1d_column_handler_approx.rs  filter_1d_rgb.rs  filter_1d_rgb_approx.rs  filter_1d_rgb_row_handler.rs  filter_1d_rgb_row_handler_approx.rs  filter_1d_rgba.rs  filter_1d_rgba_approx.rs  filter_1d_rgba_row_handler.rs  filter_1d_rgba_row_handler_approx.rs  filter_1d_row_handler.rs  filter_1d_row_handler_approx.rs  filter_2d_approx.rs  filter_2d_rgb.rs  filter_2d_rgb_approx.rs  filter_2d_rgba.rs  filter_2d_rgba_approx.rs  filter_column.rs  filter_column_approx.rs  filter_column_approx_symmetric.rs  filter_column_symmetric.rs  filter_element.rs  filter_row.rs  filter_row_approx.rs  filter_row_cg.rs  filter_row_cg_approx.rs  filter_row_cg_approx_symmetric.rs  filter_row_cg_symmetric.rs  filter_row_symmetric.rs  filter_row_symmetric_approx.rs  filter_scan.rs  mod.rs  region.rs  to_approx_storage.rs
src/lib/filter1d/avx/: filter_column.rs  filter_column_approx.rs  filter_column_f32.rs  filter_column_symm.rs  filter_column_symm_approx.rs  filter_column_symm_u16.rs  filter_rgb_row.rs  filter_rgb_row_approx.rs  filter_rgb_row_f32.rs  filter_rgb_row_symm.rs  filter_rgb_row_symm_approx.rs  filter_rgba_row.rs  filter_rgba_row_approx.rs  filter_rgba_row_f32.rs  filter_rgba_row_symm.rs  filter_rgba_row_symm_approx.rs  filter_row.rs  filter_row_approx.rs  filter_row_f32.rs  filter_row_symm.rs  filter_row_symm_approx.rs  filter_row_symm_u16.rs  mod.rs  utils.rs
src/lib/filter1d/neon/: filter_column.rs  filter_column_approx.rs  filter_column_approx_rdm.rs  filter_column_f32.rs  filter_column_symm.rs  filter_column_symm_approx.rs  filter_column_symm_approx_rdm.rs  filter_column_symm_f32.rs  filter_column_symm_u16.rs  filter_column_symm_u8_i16.rs  filter_column_u8_i16.rs  filter_rgb_row.rs  filter_rgb_row_approx.rs  filter_rgb_row_f32.rs  filter_rgb_row_symm_approx.rs  filter_rgb_row_symm_approx_rdm.rs  filter_rgb_row_symm_f32.rs  filter_rgb_row_symm_u8_i16.rs  filter_rgb_row_u8_i16.rs  filter_rgb_symm_row.rs  filter_rgba_row.rs  filter_rgba_row_approx.rs  filter_rgba_row_f32.rs  mod.rs  (+16 more)
src/lib/filter2d/: convolve_op.rs  fft_utils.rs  filter_2d.rs  filter_2d_fft.rs  filter_2d_handler.rs  filter_2d_rgb.rs  filter_2d_rgb_fft.rs  filter_2d_rgba.rs  filter_2d_rgba_fft.rs  gather_channel.rs  mod.rs  mul_spectrum.rs  scan_se_2d.rs
src/lib/gaussian/: declaration.rs  gaussian.rs  gaussian_approx.rs  gaussian_approx_dispatch.rs  gaussian_approx_horizontal.rs  gaussian_approx_vertical.rs  gaussian_f16.rs  gaussian_filter.rs  gaussian_hint.rs  gaussian_horizontal.rs  gaussian_kernel.rs  gaussian_kernel_filter_dispatch.rs  gaussian_linear.rs  gaussian_neon.rs  gaussian_neon_filter.rs  gaussian_precise_level.rs  gaussian_sse.rs  gaussian_sse_filter.rs  gaussian_util.rs  gaussian_vertical.rs  mod.rs
src/lib/neon/: f16_utils.rs  fast_gaussian.rs  fast_gaussian_f16.rs  fast_gaussian_f32.rs  fast_gaussian_next.rs  fast_gaussian_next_f16.rs  fast_gaussian_next_f32.rs  fast_gaussian_next_u16.rs  fast_gaussian_u16.rs  mod.rs  stack_blur_f16.rs  stack_blur_f32.rs  stack_blur_i32.rs  stack_blur_i64.rs  utils.rs
src/lib/sse/: fast_gaussian.rs  fast_gaussian_f16.rs  fast_gaussian_f32.rs  fast_gaussian_next.rs  fast_gaussian_next_f16.rs  fast_gaussian_next_f32.rs  fast_gaussian_next_u16.rs  fast_gaussian_u16.rs  mod.rs  packing.rs  stack_blur_f16.rs  stack_blur_f32.rs  stack_blur_i32.rs  stack_blur_i64.rs  utils.rs  v_load_store.rs
src/lib/stackblur/: horizontal.rs  mod.rs  sliding_window.rs  stack_blur.rs  stack_blur_f16.rs  stack_blur_f32.rs  stack_blur_pass.rs  stack_blur_u16.rs  vertical.rs
src/lib/wasm32/: fast_gaussian.rs  fast_gaussian_next.rs  mod.rs  stack_blur_i32.rs  utils.rs
(+495 files in other folders)
