workspace = { members = ["fuzz", "app/accelerate", "app"] }

[package]
name = "libblur"
version = "0.17.3"
edition = "2021"
description = "Fast image blurring in pure Rust"
readme = "./README.md"
keywords = ["blur", "gauss_blur", "image_blur", "fast_blur", "stack_blur"]
license = "Apache-2.0 OR BSD-3-Clause"
authors = ["Radzivon Bartoshyk"]
documentation = "https://github.com/awxkee/libblur"
categories = ["multimedia::images", "multimedia::video", "algorithms"]
homepage = "https://github.com/awxkee/libblur"
repository = "https://github.com/awxkee/libblur.git"
exclude = ["*.jpg", "./assets/*", "*.png"]
rust-version = "1.82.0"

[lib]
name = "libblur"
path = "src/lib.rs"

[dependencies]
colorutils-rs = "0.7"
half = { version = "2.6", features = ["num-traits"] }
num-traits = "0.2"
rayon = "1.10"
image = { version = "0.25", optional = true, default-features = false }
rustfft = { version = "6.3", optional = true }
fast_transpose = { version = "0.2", optional = true }

[features]
default = ["avx", "sse", "rdm", "neon"]
image = ["dep:image"]
fft = ["dep:rustfft", "dep:fast_transpose"]
rdm = ["neon"]
nightly_avx512 = []
avx = []
sse = []
neon = []

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
libc = "0.2"

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open --manifest-path ./Cargo.toml
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.profiling]
inherits = "release"
debug = true