workspace = { members = ["fuzz", "app/accelerate", "app"] }

[package]
name = "libblur"
version = "0.19.1"
edition = "2021"
description = "Fast image blurring in pure Rust"
readme = "./README.md"
keywords = ["blur", "gauss_blur", "image_blur", "fast_blur", "stack_blur"]
license = "Apache-2.0 OR BSD-3-Clause"
authors = ["Radzivon Bartoshyk"]
documentation = "https://github.com/awxkee/libblur"
categories = ["multimedia::images", "multimedia::video", "algorithms"]
homepage = "https://github.com/awxkee/libblur"
repository = "https://github.com/awxkee/libblur.git"
exclude = ["*.jpg", "./assets/*", "*.png"]
rust-version = "1.82.0"

[lib]
name = "libblur"
path = "src/lib.rs"

[dependencies]
half = { version = "2.6", features = ["num-traits"] }
num-traits = "0.2"
rayon = "1.10"
image = { version = "0.25", optional = true, default-features = false }
rustfft = { version = "6.3", optional = true }
fast_transpose = { version = "0.2.5", optional = true }
num-complex = "0.4"

[features]
default = ["avx", "sse", "rdm", "neon"]
image = ["dep:image"]
fft = ["dep:rustfft", "dep:fast_transpose"]
# Enables NEON RDM intrinsics
rdm = ["neon"]
# Enables AVX-512. Requires nightly on rust compiler before 1.89.
nightly_avx512 = []
# Enables NEON fcma, used in FFT and filter 1d complex. Requires nightly.
nightly_fcma = []
# Enables AVX intrinsics
avx = []
# Enables SSE4.1 intrinsics
sse = []
# Enables NEON intrinsics
neon = []

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open --manifest-path ./Cargo.toml
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.profiling]
inherits = "release"
debug = true