[package]
name = "fast-blur"
version = "0.1.0"
edition = "2021"

[dependencies]
colorutils-rs = "0.7.0"
half = "2.4.1"
image = "0.25.5"
libblur = { path = "../", features = ["image", "fft", "rdm", "neon", "sse", "avx", "nightly_avx512", "nightly_fcma"], default-features = false }
accelerate = { path = "accelerate" }
rayon = "1.10.0"
fast_transpose = "0.2.5"
num-complex = "0.4"

[dev-dependencies]
criterion = "0.6.0"
opencv = { version = "0.94.2", default-features = false, features = ["imgcodecs", "imgproc", "clang-runtime"] }

[[bench]]
name = "gauss"
harness = false

[[bench]]
name = "median"
harness = false

[[bench]]
name = "box"
harness = false

[[bench]]
name = "stack_blur"
harness = false

[[bench]]
name = "fast_gaussian"
harness = false

[[bench]]
name = "fast_gaussian_next"
harness = false

[[bench]]
name = "non_sep_2d"
harness = false

[[bench]]
name = "complex"
harness = false