[package]
name = "libblur-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
libblur = {path = "../src/lib"}

[[bin]]
name = "gauss"
path = "gauss/gauss.rs"
test = false
doc = false
bench = false

[[bin]]
name = "gauss_u16"
path = "gauss_u16/gauss_u16.rs"
test = false
doc = false
bench = false

[[bin]]
name = "gauss_f32"
path = "gauss_f32/gauss_f32.rs"
test = false
doc = false
bench = false
