[package]
name = "libblur-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
libblur = { path = "../", default-features = false }
arbitrary = { version = "1.4.1", features = ["derive"] }

[features]
neon = ["libblur/neon"]
avx = ["libblur/avx"]
sse = ["libblur/sse"]
rdm = ["libblur/rdm", "neon"]

[[bin]]
name = "motion"
path = "motion/motion.rs"
test = false
doc = false
bench = false

[[bin]]
name = "gauss"
path = "gauss/gauss.rs"
test = false
doc = false
bench = false

[[bin]]
name = "gauss_small_kernel"
path = "gauss_small_kernel/gauss_small_kernel.rs"
test = false
doc = false
bench = false

[[bin]]
name = "box"
path = "box/box.rs"
test = false
doc = false
bench = false

[[bin]]
name = "box_u16"
path = "box_u16/box_u16.rs"
test = false
doc = false
bench = false

[[bin]]
name = "box_f32"
path = "box_f32/box_f32.rs"
test = false
doc = false
bench = false

[[bin]]
name = "gauss_u16"
path = "gauss_u16/gauss_u16.rs"
test = false
doc = false
bench = false

[[bin]]
name = "gauss_f32"
path = "gauss_f32/gauss_f32.rs"
test = false
doc = false
bench = false

[[bin]]
name = "stack_blur"
path = "stack_blur/stack_blur.rs"
test = false
doc = false
bench = false

[[bin]]
name = "stack_blur_f32"
path = "stack_blur_f32/stack_blur_f32.rs"
test = false
doc = false
bench = false

[[bin]]
name = "stack_blur_u16"
path = "stack_blur_u16/stack_blur_u16.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fast_gaussian"
path = "fast_gaussian/fast_gaussian.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fast_gaussian_next"
path = "fast_gaussian_next/fast_gaussian_next.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fast_gaussian_next_u16"
path = "fast_gaussian_next_u16/fast_gaussian_next_u16.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fast_gaussian_next_f32"
path = "fast_gaussian_next_f32/fast_gaussian_next_f32.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fast_gaussian_u16"
path = "fast_gaussian_u16/fast_gaussian_u16.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fast_gaussian_f32"
path = "fast_gaussian_f32/fast_gaussian_f32.rs"
test = false
doc = false
bench = false