[package]
name = "libblur"
version = "0.12.1"
edition = "2021"
description = "Fast image blurring in pure Rust"
readme = "../../README.md"
keywords = ["blur", "gauss_blur", "image_blur", "fast_blur", "stack_blur"]
license = "Apache-2.0 OR BSD-3-Clause"
authors = ["Radzivon Bartoshyk"]
documentation = "https://github.com/awxkee/libblur"
categories = ["multimedia::images", "multimedia::video", "algorithms"]
homepage = "https://github.com/awxkee/libblur"
repository = "https://github.com/awxkee/libblur.git"
exclude = ["*.jpg", "../../assets/*", "*.png"]

[lib]
name = "libblur"
edition = "2021"
path = "lib.rs"

[dependencies]
colorutils-rs = "0.4.10"
half = { version = "2.4.1", features = ["num-traits"] }
num-traits = "0.2.18"
rayon = "1.10.0"