[package]
name = "libblur"
version = "0.14.10"
edition = "2021"
description = "Fast image blurring in pure Rust"
readme = "../../README.md"
keywords = ["blur", "gauss_blur", "image_blur", "fast_blur", "stack_blur"]
license = "Apache-2.0 OR BSD-3-Clause"
authors = ["Radzivon Bartoshyk"]
documentation = "https://github.com/awxkee/libblur"
categories = ["multimedia::images", "multimedia::video", "algorithms"]
homepage = "https://github.com/awxkee/libblur"
repository = "https://github.com/awxkee/libblur.git"
exclude = ["*.jpg", "../../assets/*", "*.png"]
rust-version = "1.82.0"

[lib]
name = "libblur"
edition = "2021"
path = "lib.rs"

[dependencies]
colorutils-rs = "0.7.0"
erydanos = "0.2.15"
half = { version = "2.4.1", features = ["num-traits"] }
num-traits = "0.2.18"
rayon = "1.10.0"
image = { version = "0.25.0", optional = true, default-features = false }
rustfft = { version = "6.2.0", optional = true }
fast_transpose = { version = "0.2.3", optional = true }

[features]
default = []
image = ["dep:image"]
fft = ["dep:rustfft", "dep:fast_transpose"]

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
libc = "0.2.158"